--- a/Strings/nl/Resources.resw
+++ b/Strings/nl/Resources.resw
@@ -128,4 +128,349 @@ Bouw uw portefeuille op door transacties toe te voegen via de knop 'Transactie T
   <data name="AssetsLV_ProfitLossPerc.Text" xml:space="preserve">
     <value>W/V %</value>
   </data>
+  <data name="AccountsLV_Edit.Label" xml:space="preserve">
+    <value>Wijzigen</value>
+  </data>
+  <data name="AccountsLV_MarketValue.Text" xml:space="preserve">
+    <value>Marktwaarde</value>
+  </data>
+  <data name="AccountsLV_Name.Text" xml:space="preserve">
+    <value>Naam</value>
+  </data>
+  <data name="AccountsLV_Note.Text" xml:space="preserve">
+    <value>Notitie</value>
+  </data>
+  <data name="Accounts_AddAccount.Content" xml:space="preserve">
+    <value>Account Toevoegen</value>
+  </data>
+  <data name="Accounts_Explainer.Text" xml:space="preserve">
+    <value>De Accountslijst geeft u een overzicht van locaties waar u uw crypto-activa in bewaring heeft.</value>
+  </data>
+  <data name="AccountsLV_Delete.Label" xml:space="preserve">
+    <value>Verwijderen</value>
+  </data>
+  <data name="LibraryLV_24HrChange.Text" xml:space="preserve">
+    <value>24 uur verand.</value>
+  </data>
+  <data name="LibraryLV_30DayChange.Text" xml:space="preserve">
+    <value>30 dagen verand.</value>
+  </data>
+  <data name="LibraryLV_52WeekChange.Text" xml:space="preserve">
+    <value>52 weken verand.</value>
+  </data>
+  <data name="LibraryLV_About.Label" xml:space="preserve">
+    <value>Over...</value>
+  </data>
+  <data name="LibraryLV_AddEditNote.Label" xml:space="preserve">
+    <value>Toevoegen/Wijzigen Notitie</value>
+  </data>
+  <data name="LibraryLV_Ath.Text" xml:space="preserve">
+    <value>Hoogste Prijs Ooit</value>
+  </data>
+  <data name="LibraryLV_Delete.Label" xml:space="preserve">
+    <value>Munt Verwijderen</value>
+  </data>
+  <data name="LibraryLV_MarketCap.Text" xml:space="preserve">
+    <value>Marktkapitalisatie</value>
+  </data>
+  <data name="LibraryLV_Name.Text" xml:space="preserve">
+    <value>Naam</value>
+  </data>
+  <data name="LibraryLV_Price.Text" xml:space="preserve">
+    <value>Prijs</value>
+  </data>
+  <data name="LibraryLV_Rank.Text" xml:space="preserve">
+    <value>Positie</value>
+  </data>
+  <data name="LibraryLV_Symbol.Text" xml:space="preserve">
+    <value>Symbool</value>
+  </data>
+  <data name="Library_AddCoin.Content" xml:space="preserve">
+    <value>Munt Toevoegen</value>
+  </data>
+  <data name="Library_Explainer.Text" xml:space="preserve">
+    <value>De Bibliotheek is een verzameling cryptomunten waarin u geïnteresseerd bent. U wordt dus niet afgeleid of gestoord door de grote hoeveelheid onbelangrijke munten die er zijn. De munten in de bibliotheek kunnen worden gebruikt bij het opbouwen van uw portefeuille.</value>
+  </data>
+  <data name="Library_Title.Text" xml:space="preserve">
+    <value>Bibliotheek</value>
+  </data>
+  <data name="TransactionsLV_From.Text" xml:space="preserve">
+    <value>Van</value>
+  </data>
+  <data name="TransactionsLV_To.Text" xml:space="preserve">
+    <value>Naar</value>
+  </data>
+  <data name="TransactionsLV_Type.Text" xml:space="preserve">
+    <value>Type Transactie</value>
+  </data>
+  <data name="TransactionsLV_Delete.Label" xml:space="preserve">
+    <value>Transactie Verwijderen</value>
+  </data>
+  <data name="TransactionsLV_Edit.Label" xml:space="preserve">
+    <value>Wijzigen</value>
+  </data>
+  <data name="TransactionDialog_AccountFromHeader" xml:space="preserve">
+    <value>Van Account</value>
+  </data>
+  <data name="TransactionDialog_AccountToHeader" xml:space="preserve">
+    <value>Naar Account</value>
+  </data>
+  <data name="TransactionDialog_Buy_Explainer" xml:space="preserve">
+    <value>Een aankoop is een conversie van een StableCoin naar een Non-StableCoin en kan worden gecombineerd met een transfer van het ene account naar een andere.</value>
+  </data>
+  <data name="TransactionDialog_CloseButton" xml:space="preserve">
+    <value>Annuleren</value>
+  </data>
+  <data name="TransactionDialog_CoinFromHeader" xml:space="preserve">
+    <value>Van Munt</value>
+  </data>
+  <data name="TransactionDialog_CoinHeader" xml:space="preserve">
+    <value>Munt</value>
+  </data>
+  <data name="TransactionDialog_CoinToHeader" xml:space="preserve">
+    <value>Naar Munt</value>
+  </data>
+  <data name="TransactionDialog_Convert_Explainer" xml:space="preserve">
+    <value>Wisselen is een conversie van de ene munt naar een andere munt en kan worden gecombineerd met een transfer van de ene account naar de andere.</value>
+  </data>
+  <data name="TransactionDialog_DatePicker.Header" xml:space="preserve">
+    <value>Datum</value>
+  </data>
+  <data name="TransactionDialog_Deposit_Explainer" xml:space="preserve">
+    <value>Een Storting is een transactie waarbij ‘nieuwe’ cryptovaluta uw portefeuille binnenstromen. De bron kan elke fiat-bankrekening zijn, maar wordt niet geregistreerd. Alleen het ontvangende account wordt geregistreerd.</value>
+  </data>
+  <data name="TransactionDialog_FeeCoin.Header" xml:space="preserve">
+    <value>Munt</value>
+  </data>
+  <data name="TransactionDialog_FeeQty.Header" xml:space="preserve">
+    <value>Kosten</value>
+  </data>
+  <data name="TransactionDialog_Note.Header" xml:space="preserve">
+    <value>Notitie</value>
+  </data>
+  <data name="TransactionDialog_PrimaryButton" xml:space="preserve">
+    <value>Transactie Accepteren</value>
+  </data>
+  <data name="TransactionDialog_QtyHeader" xml:space="preserve">
+    <value>Aantal</value>
+  </data>
+  <data name="TransactionDialog_Sell_Explainer" xml:space="preserve">
+    <value>Een Verkoop is een conversie van een Non-StableCoin naar een StableCoin en kan worden gecombineerd met een transfer van de ene account naar de andere.</value>
+  </data>
+  <data name="TransactionDialog_TimePicker.Header" xml:space="preserve">
+    <value>Tijd</value>
+  </data>
+  <data name="TransactionDialog_Title_Add" xml:space="preserve">
+    <value>Transactie Toevoegen</value>
+  </data>
+  <data name="TransactionDialog_Title_Edit" xml:space="preserve">
+    <value>Transactie Wijzigen</value>
+  </data>
+  <data name="TransactionDialog_TransactionType.Header" xml:space="preserve">
+    <value>Type Transactie</value>
+  </data>
+  <data name="TransactionDialog_Transfer_Explainer" xml:space="preserve">
+    <value>Een Transfer is een ‘transactie’ waarbij cryptovaluta van de ene rekening naar de andere wordt verplaatst.</value>
+  </data>
+  <data name="TransactionDialog_Withdraw_Explainer" xml:space="preserve">
+    <value>Een Opname is een transactie waarbij cryptovaluta uit uw portefeuille gaat. De bestemming kan elke fiat-bankrekening zijn.</value>
+  </data>
+  <data name="TransactionType_Buy.Content" xml:space="preserve">
+    <value>Koop</value>
+  </data>
+  <data name="TransactionType_Convert.Content" xml:space="preserve">
+    <value>Wissel</value>
+  </data>
+  <data name="TransactionType_Deposit.Content" xml:space="preserve">
+    <value>Storting</value>
+  </data>
+  <data name="TransactionType_Sell.Content" xml:space="preserve">
+    <value>Verkoop</value>
+  </data>
+  <data name="TransactionType_Withdraw.Content" xml:space="preserve">
+    <value>Opname</value>
+  </data>
+  <data name="TransactionDialog_PriceA.Header" xml:space="preserve">
+    <value>Prijs</value>
+  </data>
+  <data name="TransactionDialog_QtyB.Header" xml:space="preserve">
+    <value>Aantal</value>
+  </data>
+  <data name="TransactionDialog_FeeQty.PlaceholderText" xml:space="preserve">
+    <value>Kosten opgeven..</value>
+  </data>
+  <data name="TransactionDialog_Note.PlaceholderText" xml:space="preserve">
+    <value>notitie opgeven...</value>
+  </data>
+  <data name="TransactionDialog_PriceA.PlaceholderText" xml:space="preserve">
+    <value>price opgeven...</value>
+  </data>
+  <data name="TransactionDialog_QtyB.PlaceholderText" xml:space="preserve">
+    <value>aantal opgeven...</value>
+  </data>
+  <data name="TransactionDialog_PriceB.PlaceholderText" xml:space="preserve">
+    <value>berekende prijs...</value>
+  </data>
+  <data name="TransactionDialog_PriceB.Header" xml:space="preserve">
+    <value>Prijs</value>
+  </data>
+  <data name="AccountDialog_Description.Header" xml:space="preserve">
+    <value>Omschrijving</value>
+  </data>
+  <data name="AccountDialog_Description.PlaceholderText" xml:space="preserve">
+    <value>beschrijving kan hier....</value>
+  </data>
+  <data name="AccountDialog_Name.Header" xml:space="preserve">
+    <value>Naam</value>
+  </data>
+  <data name="AccountDialog_Name.PlaceholderText" xml:space="preserve">
+    <value>bijv: Bybit Funding...</value>
+  </data>
+  <data name="AccountDialog_CloseButton" xml:space="preserve">
+    <value>Annuleren</value>
+  </data>
+  <data name="AccountDialog_PrimaryButton_Add" xml:space="preserve">
+    <value>Account Accepteren</value>
+  </data>
+  <data name="AccountDialog_PrimaryButton_Edit" xml:space="preserve">
+    <value>Accepteren</value>
+  </data>
+  <data name="AccountDialog_Title_Add" xml:space="preserve">
+    <value>Account Toevoegen</value>
+  </data>
+  <data name="AccountDialog_Title_Edit" xml:space="preserve">
+    <value>Account Wijzigen</value>
+  </data>
+  <data name="CoinDialog_BePatient.Text" xml:space="preserve">
+    <value>* Wees geduldig - momenteel druk bij CoinGecko API.</value>
+  </data>
+  <data name="CoinDialog_CloseButton" xml:space="preserve">
+    <value>Annuleren</value>
+  </data>
+  <data name="CoinDialog_MarketCapRank.Text" xml:space="preserve">
+    <value>Marktkapitalisatie Positie</value>
+  </data>
+  <data name="CoinDialog_Name.Text" xml:space="preserve">
+    <value>Naam</value>
+  </data>
+  <data name="CoinDialog_Price.Text" xml:space="preserve">
+    <value>Prijs</value>
+  </data>
+  <data name="CoinDialog_PrimaryButton" xml:space="preserve">
+    <value>Accepteren</value>
+  </data>
+  <data name="CoinDialog_Symbol.Text" xml:space="preserve">
+    <value>Symbool</value>
+  </data>
+  <data name="CoinDialog_Title" xml:space="preserve">
+    <value>Voeg munt toe aan de Bibliotheek</value>
+  </data>
+  <data name="CoinDialog_PrimaryButton_CoinExists" xml:space="preserve">
+    <value>Munt al in Bibliotheek</value>
+  </data>
+  <data name="NoteDialog_CloseButton" xml:space="preserve">
+    <value>Annuleren</value>
+  </data>
+  <data name="NoteDialog_Note.Header" xml:space="preserve">
+    <value>Notitie</value>
+  </data>
+  <data name="NoteDialog_Note.PlaceholderText" xml:space="preserve">
+    <value>Notitie komt hier....</value>
+  </data>
+  <data name="NoteDialog_PrimaryButton" xml:space="preserve">
+    <value>Accepteren</value>
+  </data>
+  <data name="NoteDialog_Title" xml:space="preserve">
+    <value>Notitie voor</value>
+  </data>
+  <data name="DescriptionDialog_CloseButton" xml:space="preserve">
+    <value>Sluiten</value>
+  </data>
+  <data name="DescriptionDialog_Title" xml:space="preserve">
+    <value>Over</value>
+  </data>
+  <data name="Common_AcceptButton" xml:space="preserve">
+    <value>Accepteren</value>
+  </data>
+  <data name="Common_CancelButton" xml:space="preserve">
+    <value>Annuleren</value>
+  </data>
+  <data name="Common_CloseButton" xml:space="preserve">
+    <value>Sluiten</value>
+  </data>
+  <data name="Common_ConfirmButton" xml:space="preserve">
+    <value>Akkoord</value>
+  </data>
+  <data name="Common_InstallButton" xml:space="preserve">
+    <value>Installeren</value>
+  </data>
+  <data name="Messages_AccountAddFailed_Title" xml:space="preserve">
+    <value>Fout bij toevoegen van Account</value>
+  </data>
+  <data name="Messages_AccountDeleteFailed_Msg" xml:space="preserve">
+    <value>Het account bevat mogelijk nog cryptomunten.</value>
+  </data>
+  <data name="Messages_AccountDeleteFailed_Title" xml:space="preserve">
+    <value>Fout bij het verwijderen van het Account</value>
+  </data>
+  <data name="Messages_AccountDialogFailed_Title" xml:space="preserve">
+    <value>Fout bij openen van het dialoog venster.</value>
+  </data>
+  <data name="Messages_AccountUpdateFailed_Title" xml:space="preserve">
+    <value>Fout bij het wijzigen van het Accout</value>
+  </data>
+  <data name="Messages_CoinAddFailed_Title" xml:space="preserve">
+    <value>Fout bij toevoegen van een munt</value>
+  </data>
+  <data name="Messages_CoinDeleteFailed_Title" xml:space="preserve">
+    <value>Fout bij het verwijderen van een munt</value>
+  </data>
+  <data name="Messages_CoinDialogFailed_Title" xml:space="preserve">
+    <value>Fout bij het openen van het dialoog venster</value>
+  </data>
+  <data name="Messages_NoteAddFailed_Title" xml:space="preserve">
+    <value>Fout bij het wijzigen van een Notitie</value>
+  </data>
+  <data name="Messages_NoteDialogFailed_Title" xml:space="preserve">
+    <value>Fout bij het openen van het dialoog venster</value>
+  </data>
+  <data name="Messages_TransactionAddFailed_Title" xml:space="preserve">
+    <value>Fout bij het toevoegen van een Transactie</value>
+  </data>
+  <data name="Messages_TransactionDeleteFailed_Title" xml:space="preserve">
+    <value>Fout bij het verwijderen van een Transactie</value>
+  </data>
+  <data name="Messages_TransactionDelete_Msg" xml:space="preserve">
+    <value>Graag akkoord geven voor het verwijderen en terugdraaien van deze transactie</value>
+  </data>
+  <data name="Messages_TransactionDelete_Title" xml:space="preserve">
+    <value>Verzoek tot het verwijderen van een transactie</value>
+  </data>
+  <data name="Messages_TransactionDialogFailed_Title" xml:space="preserve">
+    <value>Fout bij het openen van een dialoog vensterTransaction Dialog Failure</value>
+  </data>
+  <data name="Messages_TransactionUpdateFailed_Title" xml:space="preserve">
+    <value>Fout bij het wijzigen van een Transactie</value>
+  </data>
+  <data name="Messages_UpdateChecker_DownloadFailedMsg" xml:space="preserve">
+    <value>Update wordt uitgesteld!</value>
+  </data>
+  <data name="Messages_UpdateChecker_DownloadFailedTitle" xml:space="preserve">
+    <value>Fout bij het downloaden van de Setup File.</value>
+  </data>
+  <data name="Messages_UpdateChecker_DownloadSucces" xml:space="preserve">
+    <value>Download gereed</value>
+  </data>
+  <data name="Messages_UpdateChecker_DownloadSuccesMsg" xml:space="preserve">
+    <value>Het installatiebestand is opgeslagen in uw Downloads map. Klik op 'Installeren' om door te gaan met de installatie. De applicatie wordt automatisch gesloten.</value>
+  </data>
+  <data name="Messages_UpdateChecker_NewVersionMsg" xml:space="preserve">
+    <value>Wil je het downloaden? In de tussentijd kunt u de app blijven gebruiken. U ontvangt een melding wanneer het downloaden is voltooid.</value>
+  </data>
+  <data name="Messages_UpdateChecker_NewVersionTitle" xml:space="preserve">
+    <value>Nieuwe versie beschikbaar!</value>
+  </data>
+  <data name="Messages_UpdateChecker_UpToDate_Msg" xml:space="preserve">
+    <value>Versie is up-to-date</value>
+  </data>
 </root>
