--- a/MultilingualResources/CryptoPortfolioTracker.nl.xlf
+++ b/MultilingualResources/CryptoPortfolioTracker.nl.xlf
@@ -662,6 +662,34 @@ Bouw uw portefeuille op door transacties toe te voegen via de knop 'Transactie T
           <source>Update Checker</source>
           <target state="final">Update Checker</target>
         </trans-unit>
+        <trans-unit id="CoinDialog_GetDetails_Failed" translate="yes" xml:space="preserve">
+          <source>Error while getting Details</source>
+          <target state="final">Fout bij het ophalen van de details</target>
+        </trans-unit>
+        <trans-unit id="Messages_AccountDeleteNotAllowd_Title" translate="yes" xml:space="preserve">
+          <source>Deleting not allowed!</source>
+          <target state="translated">Verwijderen niet toegestaan!</target>
+        </trans-unit>
+        <trans-unit id="Messages_AccountDeleteNotAllowed_Msg" translate="yes" xml:space="preserve">
+          <source>The Account is holding assets.</source>
+          <target state="translated">Deze account maakt nog onderdeel uit van uw portefeuille.</target>
+        </trans-unit>
+        <trans-unit id="Settings_AppTheme_Toggle.OffContent" translate="yes" xml:space="preserve">
+          <source>Light</source>
+          <target state="translated">Licht</target>
+        </trans-unit>
+        <trans-unit id="Settings_AppTheme_Toggle.OnContent" translate="yes" xml:space="preserve">
+          <source>Dark</source>
+          <target state="translated">Donker</target>
+        </trans-unit>
+        <trans-unit id="Settings_AppTheme.Description" translate="yes" xml:space="preserve">
+          <source>Select Dark or Light color theme for the application. Change will take affect after restarting the application.</source>
+          <target state="translated">Selecteer een donker of licht kleurenthema voor de toepassing. De wijziging wordt van kracht nadat de app opnieuw is gestart.</target>
+        </trans-unit>
+        <trans-unit id="Settings_AppTheme.Header" translate="yes" xml:space="preserve">
+          <source>Theme</source>
+          <target state="translated">Thema</target>
+        </trans-unit>
       </group>
     </body>
   </file>
